# federated-learning-token

./: .env_example  .gitignore  .pre-commit-config.yaml  CNAME  Makefile  README.md  asset-manifest.json  brownie-config.yaml  index.html  node_ecosystem.config.js  pyproject.toml  requirements-lib.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  deploy_webapp.yml  main.yaml
contracts/: ContractManager.sol  FederatedContract.sol  ProjectContract.sol  ProjectManager.sol  Token.sol
contracts/project/: Builders.sol  DataProviders.sol  TrainingPlans.sol
felt/: __init__.py  builder.py
felt/core/: average.py  contracts.py  data.py  node.py  prompts.py  storage.py  web3.py
felt/node/: app.py  background_worker.py
scripts/: accept_node.py  create_plan.py  deploy.py  deploy_project.py  export_predefined_models.py  helpful_scripts.py
src/client/: app.py  learning.py  main.py  template.py
static/css/: main.038fe5bb.chunk.css  main.038fe5bb.chunk.css.map  main.1bce6bc3.chunk.css  main.1bce6bc3.chunk.css.map  main.30f5f992.chunk.css  main.30f5f992.chunk.css.map  main.3695d00b.chunk.css  main.3695d00b.chunk.css.map  main.36eb3588.chunk.css  main.36eb3588.chunk.css.map  main.3eaec51f.chunk.css  main.3eaec51f.chunk.css.map  main.46fa948f.chunk.css  (+15 more)
tests/: conftest.py  test_basic_manager.py  test_basic_project.py  test_basic_token.py  test_builders.py  test_data_providers.py  test_solidity_storage.py  test_training_plans.py  test_vyper_storage.py
webapp/: .env  .eslintignore  .eslintrc.json  package.json  prettier.config.js
(+1068 files in other folders)
