[metadata]
name = felt
version = 0.1.0
description = Library for using federated learning token.
author = Břetislav Hájek
author_email = info@bretahajek.com
url = https://github.com/Breta01/federated-learning-token
keywords = Machine Learning, Federated Learning, Token
classifiers =
    Programming Language :: Python :: 3

[options]
packages = felt

[options.entry_points]
console_scripts =
    felt-node-server = felt.node.app:main
    felt-node-worker = felt.node.background_worker:main
